# music-platform-backend

./: .env.example  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
albums/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_is_explict_alter_album_cost.py  0003_rename_is_explict_album_is_explicit.py  0004_rename_is_explicit_album_is_approved_by_admin.py  0005_album_created_album_modified.py  0006_remove_album_creation_date.py  0007_song.py  0008_song_audio_song_image.py  0009_remove_song_name_song_song_name.py  0010_remove_song_song_name_song_name.py  0011_remove_song_audio_remove_song_image.py  0012_song_image.py  0013_song_audio_alter_song_image.py  0014_alter_song_name.py  0015_alter_song_name.py  0016_alter_song_name.py  0017_alter_song_name.py  0018_alter_song_name.py  0019_alter_song_audio_alter_song_image.py  0020_song_image_thumbnail_alter_song_audio_and_more.py
albums/templates/albums/: album_form.html
albums/tests/: test_endpoints.py  test_serializers.py
artists/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_social_link.py
artists/tests/: test_endpoints.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_login_endpoint.py  test_logout_endpoint.py  test_registration_endpoint.py
musicplatform/: RESULTS.md  celery.py  settings.py  urls.py
templates/: main.html
templates/registration/: login.html
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_endpoints.py
(+3 files in other folders)
